--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -166,7 +166,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(https://upload.wikimedia.org/wikipedia/commons/0/00/NIH_Clinical_Research_Center_aerial.jpg) no-repeat center center scroll;
+    background: url(https://upload.wikimedia.org/wikipedia/commons/f/f0/Healy_Hall%2C_Georgetown_University%2C_Georgetown%2C_Washington%2C_DC_%2846606951611%29.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -233,7 +233,7 @@ hr.small {
     height: 400px;
     color: #000;
     font-family: 'Comfortaa', cursive;
-    background: url(https://upload.wikimedia.org/wikipedia/commons/c/c8/NIH_Master_Logo_Vertical_2Color.png) no-repeat center center scroll;
+    background: url(/img/NIH.jpg) no-repeat center center scroll;
     -webkit-background-size: auto;
     -moz-background-size: auto;
     background-size: auto;
@@ -256,7 +256,7 @@ hr.small {
     height: 400px;
     color: #fff;
     font-family: 'Comfortaa', cursive;
-    background: url(https://upload.wikimedia.org/wikipedia/commons/0/00/NIH_Clinical_Research_Center_aerial.jpg) no-repeat center center scroll;
+    background: url(https://upload.wikimedia.org/wikipedia/commons/3/33/Georgetown_from_Roosevelt_Island.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
