--- a/index.html.tmpl
+++ b/index.html.tmpl
@@ -79,9 +79,9 @@
 		    </div>
             <br>
 			<a href="{{registration_link}}" target="_blank" class="btn btn-dark btn-lg top5 left5">Register Now</a>
-      <a href="{{slack_link}}" target="_blank" class="btn btn-dark btn-lg top5 left5">Join Brainhack on Slack</a>
+<!--       <a href="{{slack_link}}" target="_blank" class="btn btn-dark btn-lg top5 left5">Join Brainhack on Slack</a>
       <a href="{{project_submit_link}}" target="_blank" class="btn btn-dark btn-lg top5 left5">Submit a Project</a><br><br>
-
+ -->
 			<br><br><br>
             <p>Image from <a href="{{title_photo_link}}">{{title_photo_author}}</a></p>
             <!-- <a href="#about" class="btn btn-dark btn-lg">Find Out More</a> -->
