--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -166,7 +166,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(https://upload.wikimedia.org/wikipedia/commons/f/f0/Healy_Hall%2C_Georgetown_University%2C_Georgetown%2C_Washington%2C_DC_%2846606951611%29.jpg) no-repeat center center scroll;
+    background: url(https://upload.wikimedia.org/wikipedia/commons/5/50/Lincoln_memorial_dc_20041011_095847_1.3008x2000.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -233,7 +233,7 @@ hr.small {
     height: 400px;
     color: #000;
     font-family: 'Comfortaa', cursive;
-    background: url(/img/NIH.jpg) no-repeat center center scroll;
+    background: url(https://upload.wikimedia.org/wikipedia/commons/9/9f/Georgetown_Hoyas_logo.svg) no-repeat center center scroll;
     -webkit-background-size: auto;
     -moz-background-size: auto;
     background-size: auto;
