--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -27,7 +27,7 @@ body {
     display: table-cell;
     text-align: center;
     vertical-align: middle;
-    color:darkred;
+    color:white;
     font-family: 'Comfortaa', cursive;
 }
 
