--- a/index.html.tmpl
+++ b/index.html.tmpl
@@ -67,22 +67,22 @@
     <header id="top" class="header">
         <div class="text-vertical-center text-center">
             <h1>{{title}}</h1>
-            <div class="row">
-                <div class="col-xl-8 col-xl-offset-2 col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
-                    <h2>{{location}}</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xl-8 col-xl-offset-2 col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
-                    <h2>{{dates}}</h2>
-                </div>
-            </div>
+			<div class="row">
+				<div class="col-xl-8 col-xl-offset-2 col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
+					<h2>{{location}}</h2>
+				</div>
+		    </div>
+			<div class="row">
+				<div class="col-xl-8 col-xl-offset-2 col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
+					<h2>{{dates}}</h2>
+				</div>
+		    </div>
             <br>
-            <a href="{{registration_link}}" target="_blank" class="btn btn-dark btn-lg top5 left5">Register Now</a>
+			<a href="{{registration_link}}" target="_blank" class="btn btn-dark btn-lg top5 left5">Register Now</a>
       <a href="{{slack_link}}" target="_blank" class="btn btn-dark btn-lg top5 left5">Join Brainhack on Slack</a>
       <a href="{{project_submit_link}}" target="_blank" class="btn btn-dark btn-lg top5 left5">Submit a Project</a><br><br>
 
-            <br><br><br>
+			<br><br><br>
             <p>Photo by <a href="{{title_photo_link}}">{{title_photo_author}}</a></p>
             <!-- <a href="#about" class="btn btn-dark btn-lg">Find Out More</a> -->
         </div>
@@ -140,60 +140,60 @@
         <div class="container">
             <div class="row text-center">
                  <div class="col-xl-8 col-xl-offset-2 col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
-                    <p><h3><a href="{{registration_link}}" target="_blank">Registration for the {{title}} is now open!</a></h3></p>
-            <p>The {{title}} is an official satellite event of the <a href="http://brainhack.org/global{{year}}/" target="_blank">International Global Brainhack {{year}}</a> that is organized by
+					<p><h3><a href="{{registration_link}}" target="_blank">Registration for the {{title}} is now open!</a></h3></p>
+		    <p>The {{title}} is an official satellite event of the <a href="http://events.brainhack.org/global{{year}}/" target="_blank">International Global Brainhack {{year}}</a> that is organized by
             {% for org in global_brainhack_organizers %}
             {{org}}
             {% endfor %}
            . The goal of the hackathon is to bring together researchers with disparate backgrounds to collaborate on open science projects in neuroimaging.</p>
-                    <h4>Dates: {{dates}}</h4>
-                    <h4>Costs: {{details.costs}}</h4>
-                    <h4>Location: <a href="#map"> {{location}}</a></h4>
-                    <p>Participants are encouraged to post project ideas to <a href="http://www.brainhack.org" target="_blank">www.brainhack.org</a> and to submit a report describing their project to the <a href="http://www.brainhack.org/proceedings">{{year}} Brainhack Proceedings</a> that will be published by <a href="http://gigasciencejournal.com/">Gigascience</a> after the event.</p>
-                    <p>Please join <a href="{{slack_link}}" target="_blank">the Brainhack Slack project</a> for updated information on the developing Hackathon content and to contribute your own ideas.</p>
+					<h4>Dates: {{dates}}</h4>
+					<h4>Costs: {{details.costs}}</h4>
+					<h4>Location: <a href="#map"> {{location}}</a></h4>
+					<p>Participants are encouraged to post project ideas to <a href="http://www.brainhack.org" target="_blank">www.brainhack.org</a> and to submit a report describing their project to the <a href="http://www.brainhack.org/proceedings">{{year}} Brainhack Proceedings</a> that will be published by <a href="http://gigasciencejournal.com/">Gigascience</a> after the event.</p>
+					<p>Please join <a href="{{slack_link}}" target="_blank">the Brainhack Slack project</a> for updated information on the developing Hackathon content and to contribute your own ideas.</p>
                    </div>
-            </div>
-        </div>
-    </section>
+			</div>
+		</div>
+	</section>
 
     <!-- Callout -->
     <aside class="workspace" id="schedule">
         <div class="container">
-            <div class="row text-center top30">
-                <div class="col-md-2 col-md-offset-5 col-xs-8 col-xs-offset-2 text-dark">
-                    <h3>Schedule</h3>
-                </div>
-            </div>
-            <div class="row top30">
+			<div class="row text-center top30">
+				<div class="col-md-2 col-md-offset-5 col-xs-8 col-xs-offset-2 text-dark">
+				    <h3>Schedule</h3>
+			    </div>
+			</div>
+			<div class="row top30">
 {% for sched in schedule %}
-                <div class="col-md-6 col-lg-4 col-sm-10 col-xs-10 col-md-offset-0 col-lg-offset-0 col-sm-offset-1 col-xs-offset-1">
-                    <div class="row top5 text-center">
-                        <div class="col-md-8 col-md-offset-2 col-xs-8 col-xs-offset-2 text-dark">
-                            <h4>{{sched.date}}</h4>
-                        </div>
-                    </div>
+				<div class="col-md-6 col-lg-4 col-sm-10 col-xs-10 col-md-offset-0 col-lg-offset-0 col-sm-offset-1 col-xs-offset-1">
+					<div class="row top5 text-center">
+				        <div class="col-md-8 col-md-offset-2 col-xs-8 col-xs-offset-2 text-dark">
+					        <h4>{{sched.date}}</h4>
+				        </div>
+				    </div>
             {% for time in sched.times %}
-                    <div class="row top5">
-                        <div class="col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1 col-sm-5 col-sm-offset-0 col-xs-5 text-dark">
-                            {{time.time}}
-                        </div>
-                        <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
-                            {{time.event}}
-                        </div>
-                    </div>
+					<div class="row top5">
+			            <div class="col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1 col-sm-5 col-sm-offset-0 col-xs-5 text-dark">
+				            {{time.time}}
+			            </div>
+			            <div class="col-sm-7 col-sm-offset-0 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1 col-xs-7 text-dark">
+				            {{time.event}}
+			            </div>
+				    </div>
             {% endfor %}
             <div class="row top5">&nbsp;
-                    </div>
-                    <div class="row top5">&nbsp;
-                    </div>
-                    <div class="row top5">&nbsp;
-                    </div>
-                </div>
+  				    </div>
+  					<div class="row top5">&nbsp;
+  				    </div>
+  					<div class="row top5">&nbsp;
+  				    </div>
+  				</div>
 {% endfor %}
 
 
-            </div>
-        </div>
+		    </div>
+		</div>
     </aside>
 
 
@@ -211,37 +211,37 @@
 
     <!-- Map -->
     <section id="map" class="map">
-    <iframe width="100%" height="100%" frameborder="0" scrolling="no" scrollwheel="false" marginheight="0" marginwidth="0" src="{{google_maps_link}}" style="border:0" allowfullscreen></iframe>
-        <br />
+	<iframe width="100%" height="100%" frameborder="0" scrolling="no" scrollwheel="false" marginheight="0" marginwidth="0" src="{{google_maps_link}}" style="border:0" allowfullscreen></iframe>
+	    <br />
         <small>
         <a href="{{google_maps_link}}"></a>
 
-        </small>
+	    </small>
     </section>
 
     <section id="sponsors" class="no-padding">
         <div class="container-fluid">
             <div class="row no-gutter">
-                <div class="col-lg-12 text-center">
-                    <br><h3 class="text-color-blue"><strong>The {{title}} is generously sponsored By:</strong></h3><br><br>
-                </div>
-            </div>
+				<div class="col-lg-12 text-center">
+				    <br><h3 class="text-color-blue"><strong>The {{title}} is generously sponsored By:</strong></h3><br><br>
+			    </div>
+			</div>
 {% for sponsor in sponsors %}
-          <div class="row no-gutter top30">
+		  <div class="row no-gutter top30">
         {% if loop.index % 2 %}
-                <div class="col-lg-12 text-center" >
+			    <div class="col-lg-10 col-lg-offset-1" >
             {% endif %}
-                    <div class="col-lg-12 text-center">
-                        <a href="{{sponsor.url}}" target="_blank"><img src="{{sponsor.logo}}" class="img-responsive center-block" alt="{{sponsor.name}}" id="{{sponsor.name.replace(" ", "_")}}"></a>
+                    <div class="col-lg-6 col-lg-offset-0 col-md-6 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+                        <a href="{{sponsor.url}}" target="_blank"><img src="{{sponsor.logo}}" class="img-responsive" alt="{{sponsor.name}}" id="{{sponsor.name.replace(" ", "_")}}"></a>
                     </div>
 
             {% if loop.index % 2 %}
                   </div>
             {% endif %}
-            </div>
+			</div>
 {% endfor %}
 
-            <br><br>
+			<br><br>
         </div>
     </section>
 
@@ -305,13 +305,13 @@
         });
     });
 
-    $('.map').click(function () {
-        $('.map iframe').css("pointer-events", "auto");
-    });
+	$('.map').click(function () {
+	    $('.map iframe').css("pointer-events", "auto");
+	});
 
-    $( ".map" ).mouseleave(function() {
-      $('.map iframe').css("pointer-events", "none");
-    });
+	$( ".map" ).mouseleave(function() {
+	  $('.map iframe').css("pointer-events", "none");
+	});
 
     </script>
 
